# movie-finder-mcp-qdrant

./: .cursorrules  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  Jenkinsfile  Makefile  README.md  pyproject.toml
.codex/: config.toml
.cursor/rules/: architect.mdc  developer.mdc  project.mdc  python.mdc
.gemini/: settings.json
.gemini/skills/architect/: SKILL.md
.gemini/skills/developer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml  linked_task.yml
.github/workflows/: ci.yml
.junie/: guidelines.md
ai-context/prompts/: implement.md
src/qdrant/: config.py  main.py
src/qdrant/math/: search.py
src/qdrant/models/: search.py
tests/: conftest.py  test_config.py  test_main.py  test_math.py
